# little-synth

./: ARCHITECTURE.md  Cargo.toml  Makefile  README.md  little-synth-firmware.hex
.cargo/: config.toml
crates/controller/: Cargo.toml  README.md
crates/controller/src/: brkbx.rs  lib.rs  state.rs  std_key_log.rs
crates/firmware/: Cargo.toml  build.rs
crates/firmware/.cargo/: config.toml
crates/firmware/src/: audio.rs  brkbx_teensy41.rs  display.rs  lib.rs  main.rs  midi_uart.rs
crates/synth/: Cargo.toml
crates/synth/src/: effects.rs  envelope.rs  filter.rs  lfo.rs  lib.rs  midi.rs  oscillator.rs
crates/synth/tests/: envelope.rs  lfo.rs  midi.rs  oscillator.rs
docs/: AGENT_TASKS.md
