[package]
name = "little-synth-controller"
version = "0.1.0"
edition = "2021"
description = "Hardware abstraction for synth controllers: brkbx (key matrix, knobs, sliders, joysticks), swappable with MIDI (e.g. Keystep Pro)"

[features]
default = []
# Brkbx breakbox-style hardware (key matrix, knobs, faders, joysticks, rotary)
brkbx = []
# Enable std and key logging to terminal or file (for host/simulator use)
key_log_std = []

[dependencies]
